--- a/homepage.html
+++ b/homepage.html
@@ -203,6 +203,18 @@
             #pay-button:hover {
                 background-color: #45a049;
             }
+
+            #doc-title, #doc-description, #doc-tags {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    padding: 5px;
+}
+
+#doc-description {
+    height: 100px;
+}
+
     </style>
     <script type="module" src="./homepage.js"></script>
 </head>
